WaterWorld 3: simplify population lifecycle and reduce startup and tick load